--- a/GerenciamentoConsultoria.DAL/GerenciamentoConsultoria.DAL.csproj
+++ b/GerenciamentoConsultoria.DAL/GerenciamentoConsultoria.DAL.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.7" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 </Project>
