--- a/GerenciamentoConsultoria/GerenciamentoConsultoria.csproj
+++ b/GerenciamentoConsultoria/GerenciamentoConsultoria.csproj
@@ -4,6 +4,19 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Categoria\" />
+    <Folder Include="wwwroot\js\Categoria\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GerenciamentoConsultoria.DAL\GerenciamentoConsultoria.DAL.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
